<resources>
    <string name="app_name">Covid Matatu</string>
    <string name="covid_matatu">Covid Matatu</string>
    <string name="covid_desc">Corona Virus Disease(COVID-19) is an infectious disease caused by a new virus</string>
    <string name="app_desc_text">Help fight the invisible enemy by reporting COVID-19 related emergencies</string>
    <string name="covid_19">Covid-19</string>
    <string name="donate">Donate</string>
    <string name="emergency">Emergency</string>
    <string name="coughing">Coughing</string>
    <string name="statistics">Statistics</string>
    <string name="wear_mask">Wear a face mask in public</string>
    <string name="signs">Signs of corona virus infection</string>
    <string name="preventive_measures">Prevention Measures</string>
    <string name="cough_desc">COVID 19 causes a dry cough to most of the infected patients</string>
    <string name="cases_label">Coronavirus cases in Kenya</string>
    <string name="distribution_of_cases">Distribution of cases in different counties in the country</string>
    <string name="affected_counties">Number of affected counties:</string>
    <string name="no_of_affected_counties">22</string>
    <string name="name_of_county">Name of county</string>
    <string name="number_of_cases">No. of cases</string>
    <string name="nairobi_county">Nairobi County</string>
    <string name="cases">400</string>
    <string name="emergency_title">Report an emergency or a COVID 19 related misconduct in a matatu</string>
    <string name="type_of_emergency">Type of emergency or complaint:</string>
    <string name="name_of_the_sacco">Name of the sacco:</string>
    <string name="input_sacco_name">Input sacco name</string>
    <string name="select_as_sacco">Select a sacco</string>
    <string name="matatu_route">Matatu Route:</string>
    <string name="enter_route">Enter route</string>
    <string name="reg_hint">KCA 617B</string>
    <string name="registration_number">Registration Number</string>
    <string name="describe_your_emergency">Describe your emergency</string>

    <string-array name="emergency_list">
        <item>Not maintaining hygiene in matatu and wearing face masks</item>
        <item>Carrying excess passengers</item>
        <item>Exorbitant fares</item>
    </string-array>
</resources>
