<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/chartLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="@drawable/rounded_piechart_layout">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/statistics_title_boarder">

        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/covid_19"
            android:textAllCaps="true"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/cases_label"
            android:gravity="center"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/white"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chartLayout">


            <LinearLayout
                android:id="@+id/dist_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/statistics_title_boarder"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="280dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center"
                    android:text="@string/distribution_of_cases"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@drawable/no_corners"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/no_corners"
                    android:fontFamily="serif"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="2dp"
                    android:text="@string/affected_counties"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textAffectedCounties"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/no_corners"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center"
                    android:text="@string/no_of_affected_counties"
                    android:textColor="@color/red"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/rounded_piechart_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/name_of_county"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/aclonica"
                        android:background="@drawable/no_corners"/>

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_of_cases"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/aclonica"
                        android:background="@drawable/no_corners"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/statistics_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>